--- a/package.json
+++ b/package.json
@@ -24,5 +24,13 @@
   "bugs": {
     "url": "https://github.com/gabhu-dev/LIM010-fe-burger-queen-api-client/issues"
   },
-  "homepage": "https://github.com/gabhu-dev/LIM010-fe-burger-queen-api-client#readme"
+  "homepage": "https://github.com/gabhu-dev/LIM010-fe-burger-queen-api-client#readme",
+  "devDependencies": {
+    "eslint": "^6.5.1",
+    "eslint-config-airbnb-base": "^13.2.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jest": "^22.1.2",
+    "eslint-plugin-react": "^7.16.0",
+    "jest": "^24.9.0"
+  }
 }
