--- a/my-app/package.json
+++ b/my-app/package.json
@@ -37,6 +37,7 @@
         "eslint-plugin-jsx-a11y": "^6.2.3",
         "eslint-plugin-react": "^7.16.0",
         "eslint-plugin-react-hooks": "^1.7.0",
+        "fetch-mock": "^7.5.1",
         "nock": "^11.4.0",
         "node-sass": "^4.12.0",
         "sass-loader": "^8.0.0"
