--- a/my-app/package.json
+++ b/my-app/package.json
@@ -31,12 +31,15 @@
         ]
     },
     "devDependencies": {
+        "@testing-library/react": "^9.3.0",
         "eslint": "^6.5.1",
         "eslint-config-airbnb": "^18.0.1",
         "eslint-plugin-import": "^2.18.2",
         "eslint-plugin-jsx-a11y": "^6.2.3",
         "eslint-plugin-react": "^7.16.0",
         "eslint-plugin-react-hooks": "^1.7.0",
+        "fetch-mock": "^7.5.1",
+        "nock": "^11.4.0",
         "node-sass": "^4.12.0",
         "sass-loader": "^8.0.0"
     }
