--- a/my-app/package.json
+++ b/my-app/package.json
@@ -14,7 +14,7 @@
         "build": "react-scripts build",
         "test": "react-scripts test --coverage",
         "eject": "react-scripts eject",
-        "eslint": "eslint src / ** / *. js src / ** / *. jsx"
+        "eslint":"eslint --ext .js src/"
     },
     "eslintConfig": {
         "extends": "react-app"
